# HR-System

./: README.md
interview-platform/backend/: alembic.ini  pyproject.toml  seed_user.py  start.sh
interview-platform/backend/alembic/: env.py
interview-platform/backend/alembic/versions/: 788aff7a7c7e_create_tables.py
interview-platform/backend/app/: main.py
interview-platform/backend/app/auth/: dependencies.py  roles.py  routes.py  utils.py
interview-platform/backend/app/core/: config.py  dependencies.py  permissions.py  rbac.py  security.py
interview-platform/backend/app/db/: database.py  dependencies.py  session.py
interview-platform/backend/app/db/models/: __init__.py  candidate.py  candidate_state_history.py  role.py  user.py
interview-platform/backend/app/hiring/candidates/: permissions.py  routes.py  schemas.py  state_machine.py  states.py  transitions.py  validator.py
interview-platform/backend/app/users/: schemas.py
